# metafusion-lab

./: .gitignore  E156-PROTOCOL.md  README.md  push.sh  pyproject.toml
data/: demo_trials.csv
docs/: protocol.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
e156-submission/assets/: dashboard.html  index.html
outputs/hardening-2026-03-24/: reconciliation.ndjson
paper/: metafusion_f1000.md
src/metafusion_lab/: __init__.py  adapters.py  analysis.py  cli.py  io.py  models.py  pipeline.py  scoring.py
tests/: test_adapters.py  test_edge_cases.py  test_pipeline.py
tests/fixtures/: rct_extractor_ma_records.jsonl  truthcert_verify_response.json
truth-recovery/: dgp.py  engine.py  harness.py  test_truth_recovery.py
